feat: proxied mlb stats API
